--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "admin"
     ],
     "license": "MIT",
-    "require": {},
+    "require": {
+        "lifetime/service": "1.6.*"
+    },
     "autoload": {
         "psr-4": {
             "tpadmin\\" : "src"
